2007-05-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lens.c: applied patch from Aurimas Juška that
	fixes use of the GimpZoomPreview widget (bug #356716).

2007-05-25  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/Makefile.am: Missed commit of this file.

	* plug-ins/script-fu/scheme-wrapper.h:
	* plug-ins/script-fu/scheme-wrapper.c (ts_output_string): Updated
	to expect a 'const char *' and an int but no file pointer.

	* plug-ins/script-fu/tinyscheme/scheme.c:
	* plug-ins/script-fu/tinyscheme/scheme.h: Changes due to use of
	'const char *' for ts_output_routine.

2007-05-25  Kevin Cozens  <kcozens@cvs.gnome.org>

	This is the first part of fixing bugs #438997 and #440674. 

	* plug-ins/script-fu/scheme-wrapper.c: Removed ts_output_routine
	declaration from here...

	* plug-ins/script-fu/tinyscheme/scheme.h: and added it here.

	* plug-ins/script-fu/tinyscheme/scheme.c (putchars): Updated to be
	smarter about where it's output needs to be sent.

2007-05-25  Sven Neumann  <sven@gimp.org>

	* app/composite/gimp-composite-mmx.c
	* app/composite/gimp-composite-sse2.c
	* app/composite/gimp-composite-regression.c: minor code cleanup.

2007-05-25  Sven Neumann  <sven@gimp.org>

	* app/composite/gimp-composite-sse-test.c
	* app/composite/gimp-composite-test.c
	* app/composite/gimp-composite-sse2-test.c
	* app/composite/gimp-composite-altivec-test.c
	* app/composite/gimp-composite-3dnow-test.c
	* app/composite/gimp-composite-mmx-test.c
	* app/composite/gimp-composite-vis-test.c: minor code cleanup.

2007-05-25  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsessioninfoaux.[ch]
	* app/widgets/gimpsessioninfobook.[ch]
	* app/widgets/gimpsessioninfodock.[ch]
	* app/widgets/gimpsessioninfodockable.[ch]: renamed these...

	* app/widgets/gimpsessioninfo-aux.[ch]
	* app/widgets/gimpsessioninfo-book.[ch]
	* app/widgets/gimpsessioninfo-dock.[ch]
	* app/widgets/gimpsessioninfo-dockable.[ch]: ...to these.

	* app/widgets/Makefile.am